--- a/calculadora.html
+++ b/calculadora.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
         <form name="calculator">
-            <input type="text" name="screen" id="txtscreen" disabled>
+            <input type="text" name="screen" disabled>
             <div class="row">
                 <input type="button" value="1">
                 <input type="button" value="2">
