--- a/elementos.html
+++ b/elementos.html
@@ -5,18 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ejemplo de Manipulación del DOM</title>
-    <style>
-        .img-responsive {
-            width: 100px;
-            height: 100px;
-        }
-
-        .old-div {
-            background-color: lightgrey;
-            padding: 20px;
-            margin: 10px;
-        }
-    </style>
+    <link rel="stylesheet" href="./css/elementos.css">
 </head>
 
 <body>
@@ -27,7 +16,7 @@
         <p>Este es un div con fondo color azul.</p>
     </div>
 
-    <img src="https://via.placeholder.com/150" alt="Placeholder Image" />
+    <img src="" alt="Placeholder Image" />
 
     <div class="old-div">
         <p>Este es un div antiguo que será eliminado.</p>
@@ -47,6 +36,8 @@
         <li>Banana</li>
         <li>Cereza</li>
         <li>Uva</li>
+        <li>Sandia</li>
+
     </ul>
 
     <!-- Área de Drag & Drop -->
