--- a/elementos.html
+++ b/elementos.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ejemplo de Manipulación del DOM</title>
     <link rel="stylesheet" href="./css/elementos.css">
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 
 <body>
@@ -16,7 +17,7 @@
         <p>Este es un div con fondo color azul.</p>
     </div>
 
-    <img src="" alt="Placeholder Image" />
+    <img src="./img/imagen.jpg" alt="Placeholder Image" />
 
     <div class="old-div">
         <p>Este es un div antiguo que será eliminado.</p>
@@ -37,7 +38,6 @@
         <li>Cereza</li>
         <li>Uva</li>
         <li>Sandia</li>
-
     </ul>
 
     <!-- Área de Drag & Drop -->
